Fix the z-index of the status bar

--- a/app/stylesheets/shell-window/statusbar.less
+++ b/app/stylesheets/shell-window/statusbar.less
@@ -2,6 +2,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
+  z-index: 20;
   background: #eee;
   padding: 0 5px;
   border: 1px solid #aaa;
